--- a/.github/workflows/feature-ci.yml
+++ b/.github/workflows/feature-ci.yml
@@ -2,18 +2,22 @@ name: Feature CI
 # https://github.com/shivammathur/setup-php
 on:
   push:
-    branches-ignore: [master]
+    branches-ignore: [ master-flow ]
 
   pull_request:
-    branches-ignore:
-      - master
+    branches-ignore: [ master ]
 
 env:
   extensions: mbstring #intl, pcov
+
 jobs:
-  phpstan:
-    runs-on: ubuntu-latest
-    name: PhpStan
+  executable_finder_test_local: 
+    runs-on: ${{ matrix.operating-system }}
+    strategy:
+      matrix:
+        operating-system: [ubuntu-latest]
+        php-versions: ['7.4']
+    name: Executable Finder on Local Test (${{ matrix.operating-system }}, PHP ${{ matrix.php-versions }})
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -21,97 +25,101 @@ jobs:
     - name: Install PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '7.4'
-        tools: prestissimo, phpcpd
-
-    - name: Get composer cache directory
-      id: composercache
-      run: echo "::set-output name=dir::$(composer config cache-files-dir)"
-
-    - name: Cache dependencies
-      uses: actions/cache@v2
-      with:
-        path: ${{ steps.composercache.outputs.dir }}
-        key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
-        restore-keys: ${{ runner.os }}-composer-
+        php-version: ${{ matrix.php-versions }}
+        extensions: ${{ env.extensions }}
+        ini-values: "post_max_size=256M"
+        coverage: none
+        
+    - name: Install dependencies
+      run: composer install --prefer-dist --no-progress --no-suggest
 
     - name: Install Parallel-Lint
       run: composer global require php-parallel-lint/php-parallel-lint
 
-    - name: Install dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest
+    - name: Testing the Executable Finder
+      run: vendor/bin/phpunit tests/System/ExecutableFinderTest.php
 
-    - name: Execute PhpStan
-      run: php bin/githooks tool:phpstan
-
-  phpcs:    
-    runs-on: ubuntu-latest
-    name: Php Code Sniffer
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-
-    - name: Install PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: '7.4'
-        tools: prestissimo
-
-    - name: Get composer cache directory
-      id: composercache
-      run: echo "::set-output name=dir::$(composer config cache-files-dir)"
-
-    - name: Cache dependencies
-      uses: actions/cache@v2
-      with:
-        path: ${{ steps.composercache.outputs.dir }}
-        key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
-        restore-keys: ${{ runner.os }}-composer-
-
-    - name: Install dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest
-
-    - name: Execute Php Code Sniffer
-      run: php bin/githooks tool:phpcs
-
-  phpmd:    
-    runs-on: ubuntu-latest
-    name: Php Mess Detector
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-
-    - name: Install PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: '7.4'
-        tools: prestissimo
-
-    - name: Get composer cache directory
-      id: composercache
-      run: echo "::set-output name=dir::$(composer config cache-files-dir)"
-
-    - name: Cache dependencies
-      uses: actions/cache@v2
-      with:
-        path: ${{ steps.composercache.outputs.dir }}
-        key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
-        restore-keys: ${{ runner.os }}-composer-
-
-    - name: Install dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest
-
-    - name: Execute Php Mess Detector
-      run: php bin/githooks tool:phpmd
-
-
-  tests:    
-    runs-on: ${{ matrix.os }}
+  executable_finder_test_phar: 
+    runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        operating-system: [ubuntu-latest]
+        php-versions: ['7.4']
+    name: Executable Finder on Phar Test (${{ matrix.operating-system }}, PHP ${{ matrix.php-versions }})
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Install PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: ${{ matrix.php-versions }}
+        extensions: ${{ env.extensions }} #optional
+        tools: prestissimo, phpunit:8.5.0
+        ini-values: "post_max_size=256M" #optional
+        coverage: none
+        
+    - name: Install dependencies
+      run: composer install --prefer-dist --no-progress --no-suggest --no-dev
+
+    - name: Install Parallel-Lint
+      run: composer global require php-parallel-lint/php-parallel-lint
+
+    - name: Composer dumpautoload
+      run: composer dumpautoload
+
+    - name: Download tools as .Phars in Unix
+      run: wget https://squizlabs.github.io/PHP_CodeSniffer/phpcs.phar && wget https://squizlabs.github.io/PHP_CodeSniffer/phpcbf.phar && wget https://phpmd.org/static/latest/phpmd.phar &&
+            wget https://github.com/phpstan/phpstan/releases/download/0.12.49/phpstan.phar && wget https://phar.phpunit.de/phpcpd.phar
+      if: ${{ ('ubuntu-latest' == matrix.operating-system || 'macos-latest' == matrix.operating-system) }}
+
+    - name: Download tools as .Phars in Windows
+      run: curl -o phpcs.phar https://squizlabs.github.io/PHP_CodeSniffer/phpcs.phar && curl -o phpcbf.phar https://squizlabs.github.io/PHP_CodeSniffer/phpcbf.phar && curl -o phpmd.phar https://phpmd.org/static/latest/phpmd.phar &&
+            curl -o phpstan.phar https://github.com/phpstan/phpstan/releases/download/0.12.49/phpstan.phar && curl -o phpcpd.phar https://phar.phpunit.de/phpcpd.phar
+      if: ${{ 'windows-latest' == matrix.operating-system }}
+      
+    - name: Testing the Executable Finder
+      run: phpunit tests/System/ExecutableFinderTest.php
+
+  executable_finder_test_global: 
+    runs-on: ${{ matrix.operating-system }}
+    strategy:
+      matrix:
+        operating-system: [ubuntu-latest]
+        php-versions: ['7.4']
+    name: Executable Finder on Global Test (${{ matrix.operating-system }}, PHP ${{ matrix.php-versions }})
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Install PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: ${{ matrix.php-versions }}
+        extensions: ${{ env.extensions }} #optional
+        tools: prestissimo, phpcs, phpcbf, phpmd, phpstan, phpcpd, phpunit:8.5.0
+        ini-values: "post_max_size=256M" #optional
+        coverage: none
+        
+    - name: Install dependencies
+      run: composer install --prefer-dist --no-progress --no-suggest --no-dev
+
+    - name: Install Parallel-Lint
+      run: composer global require php-parallel-lint/php-parallel-lint
+
+    - name: Composer dumpautoload
+      run: composer dumpautoload
+
+    - name: Testing the Executable Finder
+      run: phpunit tests/System/ExecutableFinderTest.php
+
+  tests:    
+    runs-on: ${{ matrix.operating-system }}
+    strategy:
+      matrix:
+        operating-system: [ubuntu-latest]
         php-versions: ['7.2']
-    name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.os }}
+    name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.operating-system }}
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -138,12 +146,6 @@ jobs:
 
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress --no-suggest
-
-    - name: Install Parallel-Lint
-      run: composer global require php-parallel-lint/php-parallel-lint
-
-    - name: Install Phpcpd
-      run:   wget -O phpcpd.phar https://phar.phpunit.de/phpcpd-3.0.1.phar
 
     - name: Testing the Aplication
       run: vendor/bin/phpunit
