--- a/composer.json
+++ b/composer.json
@@ -31,10 +31,12 @@
   "require-dev": {
     "mikey179/vfsstream": "^1.6",
     "mockery/mockery": "^1.3",
+    "php-parallel-lint/php-parallel-lint": "^1.2",
     "phpmd/phpmd": "^2.9",
     "phpstan/phpstan": "^0.12.46",
     "phpunit/php-code-coverage": "^6.0 || ^7.0",
     "phpunit/phpunit": "^7.0 || ^8.0",
+    "sebastian/phpcpd": "^4.1",
     "squizlabs/php_codesniffer": "^3.5"
   },
   "require": {
