--- a/.github/workflows/master-ci.yml
+++ b/.github/workflows/master-ci.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: [ubuntu-latest, macos-latest] #windows-latest
+        operating-system: [ubuntu-latest, macos-latest, windows-latest]
         php-versions: ['7.4']
     name: Executable Finder on Local Test (${{ matrix.operating-system }}, PHP ${{ matrix.php-versions }})
     steps:
@@ -116,7 +116,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest] #ubuntu-latest, macos-latest, windows-latest
+        os: [ubuntu-latest, macos-latest] #windows-latest
         php-versions: ['7.1', '7.2', '7.3', '7.4']
     name: PHP ${{ matrix.php-versions }} Full Tests on ${{ matrix.os }}
     steps:
