The path to the githooks.yml configuration file is no longer an input parameter, it is searched in the root and qa/ directories instead

--- a/.github/workflows/feature-ci.yml
+++ b/.github/workflows/feature-ci.yml
@@ -65,6 +65,9 @@ jobs:
     - name: Install Parallel-Lint
       run: composer global require php-parallel-lint/php-parallel-lint
 
+    - name: Install Mockery
+      run: composer global require mockery/mockery
+
     - name: Composer dumpautoload
       run: composer dumpautoload
 
@@ -106,6 +109,9 @@ jobs:
 
     - name: Install Parallel-Lint
       run: composer global require php-parallel-lint/php-parallel-lint
+
+    - name: Install Mockery
+      run: composer global require mockery/mockery
 
     - name: Composer dumpautoload
       run: composer dumpautoload
