--- a/.github/workflows/master-ci.yml
+++ b/.github/workflows/master-ci.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: [ubuntu-latest, macos-latest, windows-latest]
+        operating-system: [ubuntu-latest]
         php-versions: ['7.4']
     name: Executable Finder on Local Test (${{ matrix.operating-system }}, PHP ${{ matrix.php-versions }})
     steps:
@@ -24,8 +24,8 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php-versions }}
-        extensions: ${{ env.extensions }} #optional
-        ini-values: "post_max_size=256M" #optional
+        extensions: ${{ env.extensions }}
+        ini-values: "post_max_size=256M"
         coverage: none
         
     - name: Install dependencies
@@ -41,7 +41,7 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: [ubuntu-latest, macos-latest, windows-latest]
+        operating-system: [ubuntu-latest]
         php-versions: ['7.4']
     name: Executable Finder on Phar Test (${{ matrix.operating-system }}, PHP ${{ matrix.php-versions }})
     steps:
@@ -53,7 +53,7 @@ jobs:
       with:
         php-version: ${{ matrix.php-versions }}
         extensions: ${{ env.extensions }} #optional
-        tools: prestissimo, phpunit:8.5.0 #, phpcs, phpcbf, phpmd, phpstan, phpcpd, 
+        tools: prestissimo, phpunit:8.5.0
         ini-values: "post_max_size=256M" #optional
         coverage: none
         
@@ -62,6 +62,9 @@ jobs:
 
     - name: Install Parallel-Lint
       run: composer global require php-parallel-lint/php-parallel-lint
+
+    - name: Install Mockery
+      run: composer global require mockery/mockery
 
     - name: Composer dumpautoload
       run: composer dumpautoload
@@ -83,7 +86,7 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: [ubuntu-latest, macos-latest, windows-latest]
+        operating-system: [ubuntu-latest]
         php-versions: ['7.4']
     name: Executable Finder on Global Test (${{ matrix.operating-system }}, PHP ${{ matrix.php-versions }})
     steps:
@@ -104,6 +107,9 @@ jobs:
 
     - name: Install Parallel-Lint
       run: composer global require php-parallel-lint/php-parallel-lint
+
+    - name: Install Mockery
+      run: composer global require mockery/mockery
 
     - name: Composer dumpautoload
       run: composer dumpautoload
