--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
   "require-dev": {
     "mikey179/vfsstream": "^1.6",
     "mockery/mockery": "^1.3",
+    "php-mock/php-mock": "^2.2",
     "php-parallel-lint/php-parallel-lint": "^1.2",
     "phpmd/phpmd": "^2.9",
     "phpstan/phpstan": "^0.12.46",
