--- a/composer.json
+++ b/composer.json
@@ -1,49 +1,62 @@
 {
-  "name": "githooks/githooks",
-  "type": "library",
-  "description": "Ejecuta herramientas de validación y análisis de código cuando suceden eventos de git",
-  "keywords": ["git", "githooks", "precommit", "pre-commit", "commit", "qa"],
-  "license": "MIT",
-  "authors": [
-    {
-        "name": "Jorge Lilao",
-        "email": "jorgelilaoc@gmail.com"
+    "name": "githooks/githooks",
+    "type": "library",
+    "description": "Ejecuta herramientas de validación y análisis de código cuando suceden eventos de git",
+    "keywords": [
+        "git",
+        "githooks",
+        "precommit",
+        "pre-commit",
+        "commit",
+        "qa"
+    ],
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Jorge Lilao",
+            "email": "jorgelilaoc@gmail.com"
+        },
+        {
+            "name": "Pablo Lilao",
+            "email": "pablolilao@protonmail.com"
+        }
+    ],
+    "autoload": {
+        "psr-4": {
+            "GitHooks\\": "src/"
+        }
     },
-    {
-      "name": "Pablo Lilao",
-      "email": "pablolilao@protonmail.com"
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "bin": [
+        "bin/githooks"
+    ],
+    "require-dev": {
+        "mikey179/vfsstream": "^1.6",
+        "mockery/mockery": "^1.3",
+        "php-mock/php-mock": "^2.2",
+        "php-parallel-lint/php-parallel-lint": "^1.2",
+        "phpmd/phpmd": "^2.9",
+        "phpstan/phpstan": "^0.12.46",
+        "phpunit/php-code-coverage": "^4.0 | ^5.0 | ^6.0 | ^7.0 | ^8.0",
+        "phpunit/phpunit": "^6.0 | ^7.0 | ^8.0 | ^9.0",
+        "squizlabs/php_codesniffer": "^3.5"
+    },
+    "require": {
+        "illuminate/console": "^5.0 | ^6.0 | ^7.0 | ^8.0",
+        "illuminate/container": "^5.0 | ^6.0 | ^7.0 | ^8.0",
+        "illuminate/events": "^5.0 | ^6.0 | ^7.0 | ^8.0",
+        "symfony/yaml": "^3.0 | ^4.0 | ^5.0"
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "@php composer dumpautoload --ansi"
+        ]
     }
-],
-  "autoload": {
-    "psr-4": {
-      "GitHooks\\": "src/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Tests\\": "tests/"
-     }
-  },
-  "config": {
-    "sort-packages": true
-  },
-  "bin": ["bin/githooks"],
-  "require-dev": {
-    "mikey179/vfsstream": "^1.6",
-    "mockery/mockery": "^1.3",
-    "php-mock/php-mock": "^2.2",
-    "php-parallel-lint/php-parallel-lint": "^1.2",
-    "phpmd/phpmd": "^2.9",
-    "phpstan/phpstan": "^0.12.46",
-    "phpunit/php-code-coverage": "^6.0 || ^7.0",
-    "phpunit/phpunit": "^7.0 || ^8.0",
-    "sebastian/phpcpd": "^4.1",
-    "squizlabs/php_codesniffer": "^3.5"
-  },
-  "require": {
-    "illuminate/console": "^5.0 || ^6.0",
-    "illuminate/container": "^5.0 || ^6.0",
-    "illuminate/events": "^5.0 || ^6.0",
-    "symfony/yaml": "^4.0 || ^5.0"
-  }
 }
