--- a/.github/workflows/schedule-ci.yml
+++ b/.github/workflows/schedule-ci.yml
@@ -2,9 +2,9 @@ name: Schedule CI
 # https://github.com/shivammathur/setup-php
 on:
   push:
-    branches: [ master ]
-  schedule:
-    - cron:  '0 4 * * sun' # Sundays at 04 am
+    branches: [ ]
+  # schedule:
+  #   - cron:  '0 4 * * sun' # Sundays at 04 am
 
 env:
   extensions: mbstring #intl, pcov
