--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "wtyd/githooks",
     "type": "library",
-    "description": "Ejecuta herramientas de validación y análisis de código cuando suceden eventos de git",
+    "description": "Manage git hooks in a simple and sophisticated way",
     "keywords": [
         "git",
         "githooks",
