--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
         "bin/githooks"
     ],
     "require-dev": {
+        "laravel-zero/foundation": "^5.0 | ^6.0 | ^7.0 | ^8.0",
         "mikey179/vfsstream": "^1.6",
         "mockery/mockery": "^1.3",
         "php-mock/php-mock": "^2.2",
@@ -47,7 +48,8 @@
         "phpstan/phpstan": "^0.12.46",
         "phpunit/php-code-coverage": "^4.0 | ^5.0 | ^6.0 | ^7.0 | ^8.0",
         "phpunit/phpunit": "^6.0 | ^7.0 | ^8.0 | ^9.0",
-        "squizlabs/php_codesniffer": "^3.5"
+        "squizlabs/php_codesniffer": "^3.5",
+        "symfony/finder": "^4.4"
     },
     "require": {
         "illuminate/console": "^5.0 | ^6.0 | ^7.0 | ^8.0",
