--- a/.github/workflows/feature-ci.yml
+++ b/.github/workflows/feature-ci.yml
@@ -159,4 +159,8 @@ jobs:
       run:   wget -O phpcpd.phar https://phar.phpunit.de/phpcpd-3.0.1.phar
 
     - name: Testing the Aplication
-      run: vendor/bin/phpunit
+      run: |
+        echo "**** Main Test Suite ****"
+        vendor/bin/phpunit
+        echo "**** GitfilesTest ****"
+        vendor/bin/phpunit tests/Integration/GitFilesTest.php
