--- a/.github/workflows/master-ci.yml
+++ b/.github/workflows/master-ci.yml
@@ -154,4 +154,8 @@ jobs:
       run:   curl -o phpcpd.phar https://phar.phpunit.de/phpcpd-3.0.1.phar
 
     - name: Testing the Aplication
-      run: vendor/bin/phpunit
+      run: |
+        echo "\e[42m\e[30m**** Main Test Suite ****\033[0m"
+        vendor/bin/phpunit
+        echo "\e[42m\e[30m**** GitfilesTest ****\033[0m"
+        vendor/bin/phpunit tests/Integration/GitFilesTest
