--- a/composer.json
+++ b/composer.json
@@ -47,8 +47,8 @@
         "php-parallel-lint/php-parallel-lint": "^1.2",
         "phpmd/phpmd": "^2.9",
         "phpstan/phpstan": "^0.12.46",
-        "phpunit/php-code-coverage": "^4.0 | ^5.0 | ^6.0 | ^7.0 | ^8.0",
-        "phpunit/phpunit": "^6.0 | ^7.0 | ^8.0 | ^9.0",
+        "phpunit/php-code-coverage": "^6.0 | ^7.0 | ^8.0",
+        "phpunit/phpunit": "^7.0 | ^8.0 | ^9.0",
         "squizlabs/php_codesniffer": "^3.5",
         "symfony/finder": "^4.4"
     },
