Created a new flow for ExecutableFinderTest

--- a/.github/workflows/executable-finder.yml
+++ b/.github/workflows/executable-finder.yml
@@ -1,19 +1,21 @@
-name: Master
+name: Executable Finder
 # https://github.com/shivammathur/setup-php
 on:
   push:
-    branches: [ master ] 
+    branches-ignore: [ master ] #on master it only runs on ubuntu to speed up
+
   pull_request:
-    branches: [ master ]
+    branches-ignore: [ master ]
 
 env:
   extensions: mbstring #intl, pcov
+
 jobs:
   executable_finder_test_local: 
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: [ubuntu-latest]
+        operating-system: [ubuntu-latest, macos-latest, windows-latest]
         php-versions: ['7.4']
     name: Executable Finder on Local Test (${{ matrix.operating-system }}, PHP ${{ matrix.php-versions }})
     steps:
@@ -42,7 +44,7 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: [ubuntu-latest]
+        operating-system: [ubuntu-latest, macos-latest, windows-latest]
         php-versions: ['7.4']
     name: Executable Finder on Phar Test (${{ matrix.operating-system }}, PHP ${{ matrix.php-versions }})
     steps:
@@ -95,7 +97,7 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: [ubuntu-latest]
+        operating-system: [ubuntu-latest, macos-latest, windows-latest]
         php-versions: ['7.4']
     name: Executable Finder on Global Test (${{ matrix.operating-system }}, PHP ${{ matrix.php-versions }})
     steps:
@@ -125,45 +127,3 @@ jobs:
 
     - name: Testing the Executable Finder
       run: phpunit tests/System/ExecutableFinderTest.php
-
-  all-tests:    
-    runs-on: ${{ matrix.operating-system }}
-    strategy:
-      fail-fast: false
-      matrix:
-        operating-system: [ windows-latest, ubuntu-latest, macos-latest ]
-        php-versions: ['7.1', '7.2', '7.3', '7.4']
-    name: PHP ${{ matrix.php-versions }} Full Tests on ${{ matrix.operating-system }}
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-
-    - name: Install PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: ${{ matrix.php-versions }}
-        extensions: ${{ env.extensions }} #optional
-        tools: phpcs, phpcbf, phpmd, phpstan, phpcpd
-        ini-values: "post_max_size=256M" #optional
-        coverage: none
-
-    - name: Install dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest
-
-    - name: Install Parallel-Lint
-      run: composer global require php-parallel-lint/php-parallel-lint
-
-    - name: Install Phpcpd Unix
-      if: ${{ ('7.2' == matrix.php-versions || '7.1' == matrix.php-versions) && ('ubuntu-latest' == matrix.operating-system || 'macos-latest' == matrix.operating-system)}}
-      run:   wget -O phpcpd.phar https://phar.phpunit.de/phpcpd-3.0.1.phar
-      
-    - name: Install Phpcpd Windows
-      if: ${{ ('7.2' == matrix.php-versions || '7.1' == matrix.php-versions) && ('windows-latest' == matrix.operating-system)}}
-      run:   curl -o phpcpd.phar https://phar.phpunit.de/phpcpd-3.0.1.phar
-
-    - name: Testing the Aplication
-      run: |
-        echo "**** Main Test Suite ****"
-        vendor/bin/phpunit
-        echo "**** GitfilesTest ****"
-        vendor/bin/phpunit tests/Integration/GitFilesTest.php
