Fixed the Schedules flow and other minor fixes

--- a/.github/workflows/feature-ci.yml
+++ b/.github/workflows/feature-ci.yml
@@ -52,6 +52,6 @@ jobs:
     - name: Testing the Aplication
       run: |
         echo "**** Main Test Suite ****"
-        vendor/bin/phpunit
+        vendor/bin/phpunit --order-by random
         echo "**** GitfilesTest ****"
         vendor/bin/phpunit tests/Integration/GitFilesTest.php
