--- a/.github/workflows/executable-finder.yml
+++ b/.github/workflows/executable-finder.yml
@@ -2,7 +2,7 @@ name: Executable Finder
 # https://github.com/shivammathur/setup-php
 on:
   push:
-    branches-ignore: [ master ] #on master it only runs on ubuntu to speed up
+    branches-ignore: [ master, infection ] #on master it only runs on ubuntu to speed up
 
   pull_request:
     branches-ignore: [ master ]
