--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "keywords": [
         "git",
         "githooks",
+        "hooks",
         "precommit",
         "pre-commit",
         "commit",
@@ -57,10 +58,5 @@
         "illuminate/container": "^5.0 | ^6.0 | ^7.0 | ^8.0",
         "illuminate/events": "^5.0 | ^6.0 | ^7.0 | ^8.0",
         "symfony/yaml": "^3.0 | ^4.0 | ^5.0"
-    },
-    "scripts": {
-        "post-install-cmd": [
-            "@php composer dumpautoload --ansi"
-        ]
     }
 }
